# LightFw

./: .travis.yml  Makefile  README.md
app/: CMakeLists.txt  Makefile  main.c
app/include/dpdk/: rte_eal.h
dpdk/: dpdk.mak
dpdk/config/: common_base  common_linuxapp
dpdk/lib/librte_eal/common/include/: rte_eal.h
dpdk/lib/librte_eal/linuxapp/eal/: eal.c
